Updated number assignment

--- a/Intermediate_Javascript/NumbersFacts_Exercise/index.html
+++ b/Intermediate_Javascript/NumbersFacts_Exercise/index.html
@@ -22,7 +22,10 @@
             
 
             <div class="fact-wrapper">
-                <p class="numberFact" aria-live="polite">&nbsp;</p>
+                <p class="numberFact" id="fact1">&nbsp;</p>
+                <p class="numberFact" id="fact2">&nbsp;</p>
+                <p class="numberFact" id="fact3">&nbsp;</p>
+                <p class="numberFact" id="fact4">&nbsp;</p>
             </div>
         </div>
     </div>
