--- a/Intermediate_Javascript/Rest_Spread/index.html
+++ b/Intermediate_Javascript/Rest_Spread/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Rest and Spread Operator</h1>
     <script src="app.js"></script>
+    <script src="wildlife.js"></script>
 </body>
 </html>
