Destructuring notes and main html page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Destructuring and Spread Operator</title>
+    <title>Software Development</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Destructuring and Spread Operator</h1>
+    <h1>Software Development</h1>
+    <h3>Springboard Bootcamp</h3>
+    <h4>by David Clabaugh</h4>
     <script src="app.js"></script>
-    <script src="wildlife.js"></script>
 </body>
+
 </html>
