--- a/Intermediate_Javascript/Destructuring/index.html
+++ b/Intermediate_Javascript/Destructuring/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Destructuring and Spread Operator</title>
+    <title>Destructuring</title>
 </head>
 <body>
-    <h1>Destructuring and Spread Operator</h1>
+    <h1>Destructuring</h1>
     <script src="app.js"></script>
-    <script src="wildlife.js"></script>
+    
 </body>
 </html>
