Updated Array Methods

--- a/Intermediate_Javascript/Array_Methods/index.html
+++ b/Intermediate_Javascript/Array_Methods/index.html
@@ -11,9 +11,48 @@
 
 <body>
     <h1>Array Methods</h1>
+    <h2>forEach()</h2>
+    <ul>
+    <li>The forEach() method executes a provided function once for each array element.</li>
+    <li>The forEach() method does not return anything.</li>
+    <li>The forEach() method does not change the original array.</li>
+    <li>The forEach() method is used to iterate over an array.</li>
+    <li>The forEach() method is used to perform a task on each element of an array.</li>
+    </ul>
+    
+    <h2>map()</h2>
+    <ul>
+        <li>The map() method creates a new array populated with the results of calling a provided function on every element in the calling array.</li>
+        <li>The map() method returns a new array with the results.</li>
+        <li>The map() method does not change the original array.</li>
+        <li>The map() method is used to transform data.</li>
+        <li>The map() method is chainable.</li>
+        <li>The map() method is used to create a new array from an existing array.</li>
+    </ul>
+
+    <h2>filter()</h2>
+    <ul>
+        <li>The filter() method creates a new array with all elements that pass the test implemented by the provided function.</li>
+        <li>The filter() method returns a new array with the elements that pass the test.</li>
+        <li>The filter() method does not change the original array.</li>
+        <li>The filter() method is used to filter data.</li>
+        <li>The filter() method is chainable.</li>
+        <li>The filter() method is used to create a new array from an existing array.</li>
+    </ul>
+
+
+
+
+   
+
+
+
+
 </body>
 <script src="app.js"></script>
-<script src="callbackMethods.js"></script>
-<script src="forEach.js"></script>
+<!-- <script src="callbackMethods.js"></script>
+<script src="forEach.js"></script> -->
 <script src="movies.js"></script>
+<script src="map.js"></script>
+
 </html>
