Updated Array Methods added .map() exercise and notes

--- a/Intermediate_Javascript/Array_Methods/index.html
+++ b/Intermediate_Javascript/Array_Methods/index.html
@@ -54,5 +54,6 @@
 <script src="forEach.js"></script> -->
 <script src="movies.js"></script>
 <script src="map.js"></script>
+<script src="users.js"></script>
 
 </html>
