Updated Array Methods filter method assignment added

--- a/Intermediate_Javascript/Array_Methods/index.html
+++ b/Intermediate_Javascript/Array_Methods/index.html
@@ -52,8 +52,9 @@
 <script src="app.js"></script>
 <!-- <script src="callbackMethods.js"></script>
 <script src="forEach.js"></script> -->
-<script src="movies.js"></script>
+<!-- <script src="movies.js"></script>
 <script src="map.js"></script>
-<script src="users.js"></script>
-
+<script src="users.js"></script> -->
+<script src="filter.js"></script>
+<script src="planets.js"></script>
 </html>
