added first js files map and sets

--- a/Intermediate_Javascript/Adv_DataStructures/index.html
+++ b/Intermediate_Javascript/Adv_DataStructures/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Data Structures</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Advanced Data Structures</h1>
+    <hr>
+    <h2>map()</h2>
+    <div id="notes">
+        
+        <ul>
+            <li>map() is used to create a new array by applying a function to each element of an existing array.</li>
+            <li>It takes a callback function as an argument and returns a new array.</li>
+            <li>The callback function takes three arguments: the current element, the index, and the array itself.</li>
+            <li>It returns the new array.</li>
+        </ul>
+        <hr>
+
+    </div>
 </body>
 
 <script src="map.js"></script>
