find and findIndex assignment - mythical-creatures.js added

--- a/Intermediate_Javascript/Array_Methods/index.html
+++ b/Intermediate_Javascript/Array_Methods/index.html
@@ -132,4 +132,5 @@
 <script src="find_Index.js"></script>
 <script src="reduce.js"></script>
 <script src="include.js"></script>
+<script src="mythical-creatures.js"></script>
 </html>
