Returned to destructuring section

--- a/Intermediate_Javascript/Array_Methods/index.html
+++ b/Intermediate_Javascript/Array_Methods/index.html
@@ -126,11 +126,11 @@
 <!-- <script src="movies.js"></script>
 <script src="map.js"></script>
 <script src="users.js"></script> -->
-<script src="filter.js"></script>
-<script src="planets.js"></script>
-<script src="someEvery.js"></script>
-<script src="find_Index.js"></script>
+<!-- <script src="filter.js"></script> -->
+<!-- <script src="planets.js"></script> -->
+<!-- <script src="someEvery.js"></script>
+<script src="find_Index.js"></script> -->
 <script src="reduce.js"></script>
 <script src="include.js"></script>
-<script src="mythical-creatures.js"></script>
+<!-- <script src="mythical-creatures.js"></script> -->
 </html>
