--- a/Intermediate_Javascript/Destructuring/index.html
+++ b/Intermediate_Javascript/Destructuring/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destructuring</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Destructuring</h1>
+    <div class="container">
+        <h2>Array Destructuring</h2>
+        <ul>
+            <li>Array Destructuring is a feature in JavaScript that allows you to extract values from an array and assign them to variables.</li>
+            <li>It is a way to unpack values from an array into separate variables.</li>
+            
+        </ul>
+    </div>
     <script src="app.js"></script>
     
 </body>
