--- a/Intermediate_Javascript/Rest_Spread/index.html
+++ b/Intermediate_Javascript/Rest_Spread/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destructuring and Spread Operator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Destructuring and Spread Operator</h1>
+    <h1>Rest and Spread Operator</h1>
     <script src="app.js"></script>
     <script src="wildlife.js"></script>
 </body>
