Updated Styles on ADS branch added trees.js in trees data structure

--- a/Intermediate_Javascript/Adv_DataStructures/index.html
+++ b/Intermediate_Javascript/Adv_DataStructures/index.html
@@ -11,7 +11,7 @@
     <h1>Advanced Data Structures</h1>
     <hr>
     <h2>map()</h2>
-    <div id="notes">
+    <div class="container">
         
         <ul>
             <li>map() is used to create a new array by applying a function to each element of an existing array.</li>
