Added example Node Class with HTML constructor and render methods added styles to the branch and made style changes

--- a/Intermediate_Javascript/Adv_DataStructures/index.html
+++ b/Intermediate_Javascript/Adv_DataStructures/index.html
@@ -24,6 +24,8 @@
     </div>
 </body>
 
-<script src="map.js"></script>
+<!-- <script src="map.js"></script> -->
 <script src="app.js"></script>
+<script src="trees.js"></script>
+<!-- <script src="sets.js"></script> -->
 </html>
