Updateed tree and Node class

--- a/Intermediate_Javascript/Adv_DataStructures/index.html
+++ b/Intermediate_Javascript/Adv_DataStructures/index.html
@@ -20,8 +20,47 @@
             <li>It returns the new array.</li>
         </ul>
         <hr>
+        
 
     </div>
+    <h2>set()</h2>
+    <div class="container">
+        <ul>
+            <li>set() is used to create a new array by applying a function to each element of an existing array.</li>
+            <li>It takes a callback function as an argument and returns a new array.</li>
+            <li>The callback function takes three arguments: the current element, the index, and the array itself.</li>
+            <li>It returns the new array.</li>
+        </ul>
+    </div>
+    <h2>Trees</h2>
+    <div class="container">
+        <ul>
+            <li>Trees are non-linear data structures that store hierarchical data.</li>
+            <li>They consist of nodes, where each node can have zero or more child nodes.</li>
+            <li>The topmost node is called the root, and nodes without any children are called leaves.</li>
+            <li>Trees are used in various applications, such as file systems, organization charts, and HTML document structures.</li>
+        </ul>
+
+    </div>
+    <h2>Depth-First Search (DFS)</h2>
+    <div class="container">
+        <ul>
+            <li>DFS is a traversal algorithm used to explore nodes in a tree or graph.</li>
+            <li>It starts at the root and explores as far as possible along each branch before backtracking.</li>
+            <li>It uses a stack to keep track of the nodes to be explored.</li>
+            <li>DFS is useful for searching for a path or finding all nodes in a connected component.</li>
+        </ul>
+    </div>
+    <h2>Breadth-First Search (BFS)</h2>
+    <div class="container">
+        <ul>
+            <li>BFS is a traversal algorithm used to explore nodes in a tree or graph.</li>
+            <li>It starts at the root and explores all nodes at the current depth level before moving on to nodes at the next depth level.</li>
+            <li>It uses a queue to keep track of the nodes to be explored.</li>
+            <li>BFS is useful for finding the shortest path in an unweighted graph.</li>
+        </ul>
+    </div>
+
 </body>
 
 <!-- <script src="map.js"></script> -->
