added JavaScript Web Assignment

--- a/Intermediate_Javascript/JS_Web/assignment/index.html
+++ b/Intermediate_Javascript/JS_Web/assignment/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>DOM Manipulation Exercise</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<h1>Tasks</h1>
@@ -34,8 +35,8 @@
 
 		<div class="task">
 			<h2>Task 5: <span id="test-result-5">❌</span></h2>
-			<a id="task5"
-			   href="">Change the href attribute of this link to 'https://www.springboard.com/'.</a>
+			<a id="task5" 
+			href="">Change the href attribute of this link to 'https://www.springboard.com/'.</a>
 		</div>
 
 		<div class="task">
