updated JS_Events Assignment

--- a/Intermediate_Javascript/JS_Web/JS_Events/index.html
+++ b/Intermediate_Javascript/JS_Web/JS_Events/index.html
@@ -172,11 +172,11 @@
 
         <hr>
         <ul>
-            <li>Event 1 <button type="button" class="remove-event">Remove Me</button></li>
-            <li>Event 2 <button type="button" class="remove-event">Remove Me</button></li>
-            <li>Event 3 <button type="button" class="remove-event">Remove Me</button> </li>
-            <li>Event 4 <button type="button" class="remove-event">Remove Me</button></li>
-            <li>Event 5 <button type="button" class="remove-event">Remove Me</button></li>
+            <li class="event">Event 1 <button type="button" class="remove-event">Remove Me</button></li>
+            <li class="event">Event 2 <button type="button" class="remove-event">Remove Me</button></li>
+            <li class="event">Event 3 <button type="button" class="remove-event">Remove Me</button> </li>
+            <li class="event">Event 4 <button type="button" class="remove-event">Remove Me</button></li>
+            <li class="event">Event 5 <button type="button" class="remove-event">Remove Me</button></li>
         </ul>
         <form action="" id="add-event-form">
             <label for="new-event-input">Add a new event:</label>
