--- a/root/index.html
+++ b/root/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Software Development</h1>
-    <h3>Springboard Bootcamp</h3>
+    <h3>Springboard BootCamp</h3>
     <h4>by David Clabaugh</h4>
     <script src="app.js"></script>
 </body>
